add laundry lists

--- a/latexguidelines/authors.tex
+++ b/latexguidelines/authors.tex
@@ -34,7 +34,7 @@ The back matter is structured as follows:
 \section{Generic rules}
 We use the \em Generic Style Rules for Linguistics \em available on \url{https://www.academia.edu/7370927/The_Generic_Style_Rules_for_Linguistics}
 
-\section{House Rules}
+\section{House Rules}\label{sec:houserules}
 The generic rules are complemented by the following house rules:
 
 \subsection{Academic \emph{we}}
