--- a/latexguidelines/proofreaders.tex
+++ b/latexguidelines/proofreaders.tex
@@ -1,21 +1,38 @@
 \chapter{Proofreaders}
-Proofreaders should pay attention to spelling, grammar, style etc. A couple of points require special attention:
-\begin{itemize}
- \item are all floats referenced?
- \item are all examples referenced?
- \item are the guidelines adhered to? Common oversights include using 
-        lower case ``section'', ``table'', or ``figure'' in cross-references instead of capitalizing these words. 
- \item Spacing after punctuation and parentheses.
- \item Parentheses and brackets in examples should not be italicized. The same is true for most subscripts in examples.
- \item footnotemarks in examples should not be typeset in italics.
- \item References which have an open parentheses before the name rather than before the year, or vice versa
- \item Double parentheses with citations
-\end{itemize}
+Proofreaders should pay attention to spelling, grammar, style etc.  Please refer to the Generic Style Rules and the house rules listed in \sectref{sec:houserules}.
 
 Proofreaders can choose their preferred way of working. Pdf comments, scanned comments on printout, or lists of errors with page numbers are all acceptable.
 
 
+\laundrybox{Proofreading text}{ 
+\laundryitem All floats are referenced.
+\laundryitem All examples are referenced.
+\laundryitem The guidelines adhered to.
+\laundryitem British or American spelling is consistent per author.
+\laundryitem ``Section'', ``Table'', or ``Figure'' in cross-references are capitalized.
+\laundryitem Spacing after punctuation and parentheses is correct.
+\laundryitem Parentheses and brackets in examples are not italicized. 
+\laundryitem Subscripts in examples are not italicized.
+\laundryitem Footnotemarks in examples are not italicized.
+\laundryitem Parentheses are set correctly for all references.
+\laundryitem No double parentheses for citations in a parenthesized environment.
+\laundryitem Examples which are full sentences finish with punctuation in both source and translation.
+\laundryitem Examples which are not full sentences do not have a punctuation mark in source or translation.
+\laundryitem Alignment of glossed examples is correct.
+\laundryitem All examples have information about language and source. 
+}
 
+
+\laundrybox{Proofreading bibliography}{
+\laundryitem All first names are given in full unless the person prefers to use initials.
+\laundryitem No double city names in places of publication.
+\laundryitem \emph{et al.} not used in bibliography
+\laundryitem Subtitles are capitalized
+\laundryitem Proper nouns are capitalized
+\laundryitem German nouns are capitalized
+\laundryitem No extraneous information in bibliography
+\laundryitem Series title and series number are typeset correctly
+} 
 
 
 
