--- a/latexguidelines/wrap-global.tex
+++ b/latexguidelines/wrap-global.tex
@@ -101,7 +101,7 @@
 \bibliography{lsp-abbrev,lsp-guidelines}  
 
 \usepackage{framed}
-\newcommand{\laundrybox}[2]{\begin{minipage}{.5\textwidth}
+\newcommand{\laundrybox}[2]{\begin{minipage}{.8\textwidth}
 \begin{framed}\textbf{Checklist #1}\midrule\begin{itemize}#2\end{itemize}\end{framed}\end{minipage}}
 \newcommand{\laundryitem}{\item[$\Box$] }
 
@@ -112,16 +112,16 @@
 
 
 \include{introduction}
-% \include{authors}
-% % \include{gsr}
-% \include{volumeeditors}
-% \include{latex}
-% \include{conversion}
-% \include{proofreaders}
-% \include{indexers}
-% \include{typesetters} 
-% \include{openness}
-% \include{showcases}
+\include{authors}
+% \include{gsr}
+\include{volumeeditors}
+\include{latex}
+\include{conversion}
+\include{proofreaders}
+\include{indexers}
+\include{typesetters} 
+\include{openness}
+\include{showcases}
 % \include{serieseditors}
 
 \backmatter
