added info about footnotes

--- a/latexguidelines/authors.tex
+++ b/latexguidelines/authors.tex
@@ -146,7 +146,8 @@ You can use epigrams for your chapters. When using epigrams in edited volumes, m
 \subsection{Aspiration, labialization, velarization etc}
 For phonetic symbols of aspiration and secondary articulation, do not use a superscript normal letter; use the special Unicode characters ʰ ʷ ʲ ˠ ˤ etc. You can define a special command like \verb+{\lab}+ for ʷ for easier input. 
 
-
+\subsection{Footnotes in section titles}
+You should not use footnotes in section titles. Very often, a plain sentence in the running text will be just as good. If you really want a footnote, insert it after the first sentence of the relevant section.
 \section{Citations and references}
 \label{sec-references-authors}
 
