--- a/latexguidelines/indexers.tex
+++ b/latexguidelines/indexers.tex
@@ -7,7 +7,7 @@ For the various ways to add entries to the index, refer to \tabref{tab:latex:ind
 \label{tab:latex:indexentriese}
  \begin{tabular}{p{2.5cm}>{\small\raggedright}p{6.5cm}l}
   \lsptoprule
-  type & \rm\normalsize command & indexed term \\
+  type & \upshape\normalsize command & indexed term \\
   \midrule
   Subject Index& \verb+Nominalized sentences+ \verb+\is{nominalization} are+ \verb+common.+ & nomina\-lization \\
   \mbox{Subject Index} identical& \verb+... while \isi{nominalization}+ \verb+ is less frequent ...+  & nomina\-lization \\[2em]
