--- a/latexguidelines/wrap-global.tex
+++ b/latexguidelines/wrap-global.tex
@@ -101,8 +101,16 @@
 \bibliography{lsp-abbrev,lsp-guidelines}  
 
 \usepackage{framed}
-\newcommand{\laundrybox}[2]{\begin{minipage}{.8\textwidth}
-\begin{framed}\textbf{Checklist #1}\midrule\begin{itemize}#2\end{itemize}\end{framed}\end{minipage}}
+\newcommand{\laundrybox}[2]{%
+ \begin{minipage}{.8\textwidth}%
+  \begin{framed}\textbf{Checklist #1}\\%
+    \rule{\textwidth}{1pt}%
+    \begin{itemize}%
+      #2%
+    \end{itemize}%
+  \end{framed}%
+ \end{minipage}%
+ }
 \newcommand{\laundryitem}{\item[$\Box$] }
 
 \begin{document}                
