--- a/latexguidelines/wrap-global.tex
+++ b/latexguidelines/wrap-global.tex
@@ -102,9 +102,10 @@
 
 \usepackage{framed}
 \newcommand{\laundrybox}[2]{%
- \begin{minipage}{.8\textwidth}%
+ \begin{minipage}{.9\textwidth}%
   \begin{framed}\textbf{Checklist #1}\\%
     \rule{\textwidth}{1pt}%
+    \small
     \begin{itemize}%
       #2%
     \end{itemize}%
