add intonation and listings

--- a/latexguidelines/authors.tex
+++ b/latexguidelines/authors.tex
@@ -47,9 +47,8 @@ than \emph{we} as in ``As I have shown in Section~3''.
 Choose one and be consitent. For edited volumes, the choice is per chapter.  
 
 
-\subsection{Figures and tables} 
-Footnotes should not be used in tables or figures but should be attached to the text where the table is referred to.
-
+\subsection{Figures}  
+Please mention the creator and the licensing status of all photographs and all drawings in the caption unless they were created by you. The licensing must be compatible with the license chosen for the book. It is for instance legally not possible to include restricted copyrighted material in an open access book. 
 
 
 \subsection{Abbreviations}
@@ -148,6 +147,8 @@ For phonetic symbols of aspiration and secondary articulation, do not use a supe
 
 \subsection{Footnotes in section titles}
 You should not use footnotes in section titles. Very often, a plain sentence in the running text will be just as good. If you really want a footnote, insert it after the first sentence of the relevant section.
+
+
 \section{Citations and references}
 \label{sec-references-authors}
 
@@ -202,3 +203,4 @@ full information.
 
 \section{Indexes}
 All {\lsp} books have a Subject Index and a Name Index. The Language Index is optional and should be used if the book treats several languages. Subject Index and Language Index have to be prepared by the authors completely. The Name Index is generated automatically from the citations in the text. This means that you only have to add people to the Name Index who, for whatever reason, are mentioned without connection to a work in the list of references. Examples would be politicians, ancient philosophers, novelists and the like.
+ 
